--- a/MultipleKinectClient/MultipleKinectClient.csproj
+++ b/MultipleKinectClient/MultipleKinectClient.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E1A91F7E-58FF-4AD1-AFBF-16784C5EC758}</ProjectGuid>
+    <ProjectGuid>{5370C5B5-B78A-448B-B4A2-AF86A7E333D0}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RBG_D_MOST_Project_K4Wv2_WPF_Depth</RootNamespace>
-    <AssemblyName>RBG-D_MOST_Project_K4Wv2_WPF_Depth</AssemblyName>
+    <RootNamespace>MultipleKinectClient</RootNamespace>
+    <AssemblyName>MultipleKinectClient</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -85,7 +85,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="KinectViewers\KinectBodyView.cs" />
+    <Compile Include="KinectViewers\ClientKinectProcessor.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -117,6 +117,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SocketPackage\SocketPackage.csproj">
+      <Project>{7b39a687-9cfa-4c8f-a3b7-69d34c257c6e}</Project>
+      <Name>SocketPackage</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Status.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
