--- a/MultipleKinectMaster/MultipleKinectMaster.csproj
+++ b/MultipleKinectMaster/MultipleKinectMaster.csproj
@@ -124,6 +124,10 @@
     <Resource Include="Images\Status.png" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Img_Serializable\Img_Serializable.csproj">
+      <Project>{bdf93dcf-5085-4c44-b725-c5cfdb3f9f0d}</Project>
+      <Name>Img_Serializable</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SocketPackage\SocketPackage.csproj">
       <Project>{7b39a687-9cfa-4c8f-a3b7-69d34c257c6e}</Project>
       <Name>SocketPackage</Name>
