--- a/MultipleKinectClient/MultipleKinectClient.csproj
+++ b/MultipleKinectClient/MultipleKinectClient.csproj
@@ -56,6 +56,9 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net">
+      <HintPath>..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Kinect, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Kinect.Tools, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64" />
     <Reference Include="System" />
@@ -109,6 +112,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -126,6 +130,10 @@
     <ProjectReference Include="..\SocketPackage\SocketPackage.csproj">
       <Project>{7b39a687-9cfa-4c8f-a3b7-69d34c257c6e}</Project>
       <Name>SocketPackage</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\XmlManager\XmlManager.csproj">
+      <Project>{e796a79c-d0f4-4aa4-9eda-ee5725eb070f}</Project>
+      <Name>XmlManager</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
