20160126 新增同步錄影、同步撥放 1.新增同步錄影功能 2.新增同步撥放功能 3.整理註解 4.加油!!

--- a/SocketPackage/SocketPackage.csproj
+++ b/SocketPackage/SocketPackage.csproj
@@ -64,6 +64,7 @@
     <Compile Include="SocketClient.cs" />
     <Compile Include="SocketServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Status.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Img_Serializable\Img_Serializable.csproj">
