20160306 1.加入WWF 狀態機程式，使用miscroft.activities.extendends 輔助開發追蹤狀態 2.為配合修改整體環境 平台 > anyCPU assembly > 64bit 3.WWF 基本測試完成，但仍decision tree's threadhold尚未完成

--- a/MultipleKinectClient/MultipleKinectClient.csproj
+++ b/MultipleKinectClient/MultipleKinectClient.csproj
@@ -55,6 +55,27 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x86\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
+    <OutputPath>bin\x86\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
@@ -126,6 +147,10 @@
     <ProjectReference Include="..\Img_Serializable\Img_Serializable.csproj">
       <Project>{bdf93dcf-5085-4c44-b725-c5cfdb3f9f0d}</Project>
       <Name>Img_Serializable</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MotionFSM\MotionFSM.csproj">
+      <Project>{27e41e7f-87da-460a-9817-83f268af85f7}</Project>
+      <Name>MotionFSM</Name>
     </ProjectReference>
     <ProjectReference Include="..\SocketPackage\SocketPackage.csproj">
       <Project>{7b39a687-9cfa-4c8f-a3b7-69d34c257c6e}</Project>
