20160322 些微整理程式碼 新增一MasterKinectProcessor3D

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,6 +4,7 @@
   <repository path="..\Img_Serializable\packages.config" />
   <repository path="..\MultipleKinectClient\packages.config" />
   <repository path="..\MultipleKinectMaster\packages.config" />
+  <repository path="..\MultipleKinectMaster3D\packages.config" />
   <repository path="..\RBG-D_MOST_Project_K4Wv2_WPF\packages.config" />
   <repository path="..\RBG-D_MOST_Project_K4Wv2_WPF_Depth\packages.config" />
   <repository path="..\RBG-D_MOST_Project_K4Wv2_WPF_Depth_BodyIX\packages.config" />
