20160326 初版3D 骨架偵測Client與Server端建置完成 1.  基本功能完成，能夠順利在server看到Client端傳過來的骨架

--- a/MultipleKinectClient3D/MultipleKinectClient3D.csproj
+++ b/MultipleKinectClient3D/MultipleKinectClient3D.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C9490801-409C-4555-8D2F-42624398207F}</ProjectGuid>
+    <ProjectGuid>{1ABD4EC5-E4C6-4896-98E9-AA431B7D293F}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MultipleKinectMaster3D</RootNamespace>
-    <AssemblyName>MultipleKinectMaster3D</AssemblyName>
+    <RootNamespace>MultipleKinectClient3D</RootNamespace>
+    <AssemblyName>MultipleKinectClient3D</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -23,8 +23,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -36,11 +34,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="HelixToolkit">
-      <HintPath>..\packages\HelixToolkit.2015.1.698\lib\portable-net4+sl4+wp71+win8\HelixToolkit.dll</HintPath>
-    </Reference>
     <Reference Include="HelixToolkit.Wpf">
-      <HintPath>..\packages\HelixToolkit.Wpf.2015.1.698\lib\net45\HelixToolkit.Wpf.dll</HintPath>
+      <HintPath>..\..\WPF_DEMO\3D_WPF\packages\HelixToolkit.Wpf.2015.1.692\lib\net45\HelixToolkit.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Kinect, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Kinect.Tools, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64" />
@@ -75,7 +70,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="KinectViewers3D\BodyManager.cs" />
-    <Compile Include="KinectViewers3D\MasterKinectProcessor3D.cs" />
+    <Compile Include="KinectViewers3D\ClientKinectProcessor3D.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -99,7 +94,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -110,12 +104,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="dll說明.txt" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\SocketPackage\SocketPackage.csproj">
       <Project>{7b39a687-9cfa-4c8f-a3b7-69d34c257c6e}</Project>
       <Name>SocketPackage</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\XmlManager\XmlManager.csproj">
+      <Project>{e796a79c-d0f4-4aa4-9eda-ee5725eb070f}</Project>
+      <Name>XmlManager</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
