--- a/MotionFSM/MotionFSM.csproj
+++ b/MotionFSM/MotionFSM.csproj
@@ -57,6 +57,7 @@
       <HintPath>..\packages\Microsoft.Activities.Extensions.2.0.6.9\lib\Net45\Microsoft.Activities.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Kinect, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Activities" />
     <Reference Include="System.Core" />
@@ -69,6 +70,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CSV_Writter\CSV_Writter.cs" />
     <Compile Include="IWorkflowView.cs" />
     <Compile Include="MotionTransitions.cs" />
     <Compile Include="MotionsAnalyze.cs" />
