--- a/MultipleKinectMaster3D/MultipleKinectMaster3D.csproj
+++ b/MultipleKinectMaster3D/MultipleKinectMaster3D.csproj
@@ -20,7 +20,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -42,9 +42,13 @@
     <Reference Include="HelixToolkit.Wpf">
       <HintPath>..\packages\HelixToolkit.Wpf.2015.1.698\lib\net45\HelixToolkit.Wpf.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Activities.Extensions">
+      <HintPath>..\packages\Microsoft.Activities.Extensions.2.0.6.9\lib\Net45\Microsoft.Activities.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Kinect, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Kinect.Tools, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64" />
     <Reference Include="System" />
+    <Reference Include="System.Activities" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -113,6 +117,10 @@
     <Resource Include="dll說明.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MotionFSM\MotionFSM.csproj">
+      <Project>{27e41e7f-87da-460a-9817-83f268af85f7}</Project>
+      <Name>MotionFSM</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SocketPackage\SocketPackage.csproj">
       <Project>{7b39a687-9cfa-4c8f-a3b7-69d34c257c6e}</Project>
       <Name>SocketPackage</Name>
